# LISA-and-CE-Evolution

./: .#BinaryResidenceTime_AGN_Disk-ChangeGas.ipynb  .gitignore  BinaryResidenceTime_AGN_Disk-ChangeGas.ipynb  CE_crossing_LISA_band.ipynb  CEinLISA.ipynb  README.md  README.org  SNR_grid.ipynb  binary_c_core_masses.txt  core_masses.txt  fdot_and_f.txt  fdot_and_f_m1_0.5_m2_0.3.txt  fdot_and_f_m1_0.5_m2_0.3_T900000.txt  fdot_and_f_m1_m2_1.txt  gas-drag.ipynb  pyproject.toml  sepDistributionCE.ipynb
COSMIC_popsynth/: CE_GWs.ipynb  CE_rate_init.ipynb  COSMIClib.py  Common_envelope_rate_as_function_of_mass_gw_emitting.ipynb  plotsDefaults.py  run_one_binary.ipynb  sepDistributionCE.ipynb
COSMIC_popsynth/.ipynb_checkpoints/: CE_GWs-checkpoint.ipynb  sepDistributionCE-checkpoint.ipynb
COSMIC_popsynth/COSMIC_ini_files/: qcrits_0.0001.ini  qcrits_0.1.ini  qcrits_1.ini  qcrits_1000.ini  qcrits_2.ini  qcrits_clayes.ini  qcrits_clayes_Z0.002.ini  qcrits_clayes_indipendent_dist.ini  qcrits_inf.ini
COSMIC_popsynth/explore_data/: run_one_binary.ipynb
COSMIC_popsynth/explore_data/.ipynb_checkpoints/: CE_GWs-checkpoint.ipynb  run_one_binary-checkpoint.ipynb  (+1 more)
FdotPN/: Fdot.ipynb  M-D.ipynb  PNTerms.nb
MESA_files/: MESAreader.py  README.org  Roche_Radii.ipynb  binding_energy_profile.ipynb  setup_RSGs.py  utilsLib.py
MESA_files/.ipynb_checkpoints/: Roche_Radii-checkpoint.ipynb
MESA_files/RSG_template/: history_columns.list  inlist_pgstar  inlist_project  profile_columns.list  star
Stealth_bias/: M-D.ipynb
Stealth_bias/.ipynb_checkpoints/: Fdot-checkpoint.ipynb
(+3 files in other folders)
